--- a/css/home.css
+++ b/css/home.css
@@ -1,27 +1,6 @@
-/*#005ca9*/
-
 * {
     margin: 0;
     padding: 0;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-@media only screen and (max-width: 768px) {
-    .titulo {
-        margin: auto !important;
-        font-size: 30pt !important;
-    }
-
-    .registro {
-        display: none;
-    }
-
-    .img_perfil{
-        display: none;
-    }
-    .senai_logo {
-        display: none;
-    }
 }
 
 ul {
@@ -31,90 +10,21 @@ ul {
 header {
     display: flex;
     align-items: center;
+    align-content: center;
     justify-content: space-between;
-    background-color: #005ca9;
-    min-width: 100svw;
-    max-width: fit-content;
-    overflow: hidden;
-    color: white;
-}
-
-.titulo {
-    font-size: 40pt;
-    margin-left: 4.5svw;
 }
 
 .perfil {
     display: flex;
-    flex-direction: row-reverse;
-    gap: 5px;
+    flex-direction: row;
+    gap: 20px;
     align-items: center;
-    font-size: 10pt;
-    margin-right: .5svw;
 }
-
-.sair {
-    text-decoration: underline;
-    cursor: pointer;
-}
-
-.teste {
-    text-align: center;
-} 
 
 .img_perfil {
-    width: 3.5svw;
-    height: 6svh;
+    width: 30px;
+    height: 30px;
     border-radius: 100%;
     background-color: black;
-}
-
-.senai_logo {
-    width: 14svw;
-    height: 10svh;
-}
-
-main {
-    display: flex;
-    margin-top: 2%;
-}
-
-.salas_status {
-    display: flex;
-    flex-direction: column;
-    gap: 2px;
-}
-
-.salas {
-    display: flex;
-    flex-wrap: nowrap;
-    
-}
-
-.salas > div{
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
-    margin-left: 50%;
-    border: 2px solid black;
-    min-width: fit-content;
-    flex-wrap: wrap;
-    width: 25svw;
-    box-shadow: 5px 5px 5px black;
-}
-
-.botao {
-    margin: auto;
-    width: 5svw;
-    height: 3svh;
-    border-radius: 7px;
-}
-
-.add_sala {
-    margin-top: 20%;
-    background-color: grey;
-    padding: 2%;
-    border: 2px solid black;
-    border-radius: 8px;
-    text-align: center;
+    margin: 0;
 }
