--- a/css/home.css
+++ b/css/home.css
@@ -1,3 +1,33 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
+ul {
+    list-style: none;
+}
+
+header {
+    display: flex;
+    align-items: center;
+    align-content: center;
+    justify-content: space-between;
+}
+
+.perfil {
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    align-items: center;
+}
+
+.img_perfil {
+    width: 30px;
+    height: 30px;
+    border-radius: 100%;
+    background-color: black;
+    margin: 0;
+}
 /*#005ca9*/
 
 * {
@@ -75,7 +105,23 @@ a {
 
 main {
     display: flex;
-    margin-top: 2%;
+    margin: 2% 0 0 0;
+    justify-content: space-between;
+}
+
+form {
+    padding: 2%;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    width: fit-content;
+    border: solid black 2px;
+    flex-wrap: wrap;
+}
+
+form > input {
+    border-radius: 5px;
+    padding: 0.5%;
 }
 
 .salas_status {
@@ -87,18 +133,21 @@ main {
 .salas {
     display: flex;
     flex-wrap: wrap;
-    
+    justify-content: start;
+    width: 50%;
 }
 
 .salas > div{
     display: flex;
     flex-direction: column;
     gap: 5px;
-    margin-left: 50%;
+    margin-left: 2%;
+    margin-top: 2%;
     border: 2px solid black;
     min-width: fit-content;
     flex-wrap: wrap;
-    width: 25svw;
+    padding: 1%;
+    width: 13svw;
     box-shadow: 5px 5px 5px black;
 }
 
@@ -120,30 +169,38 @@ main {
 
 .erro {
     display: flex;
-    flex-direction: column;
-    margin: 0% auto;
-    width: fit-content;
+    margin: 2% auto;
     border: 2px solid black;
     padding: 1%;
     background-color: RGB(242, 54, 52);
     color: white;
     align-items: center;
-    min-width: fit-content;;
+    min-width: fit-content;
+    font-size: large;
+    word-wrap: break-word;
+    width: 12svw;
 }
 
 .certo {
     display: flex;
-    flex-direction: column;
     margin: 2% auto 0%;
-    width: fit-content;
     border: 2px solid black;
     padding: 1%;
     background-color: RGB(142, 214, 151);
     color: white;
     align-items: center;
+    width: 12svw;
     min-width: fit-content;
+    text-align: center;
+    font-size: large;
+    word-wrap: break-word;
 }
 
-.erro > span {
-    font-size: x-large;
+.fechar {
+    align-self: flex-end;
+    margin-bottom: auto;
+    font-size: small;
+    border-radius: 30px;
+    padding: 1% 2%;
+    background-color: red;
 }
