--- a/css/home.css
+++ b/css/home.css
@@ -1,33 +1,3 @@
-* {
-    margin: 0;
-    padding: 0;
-}
-
-ul {
-    list-style: none;
-}
-
-header {
-    display: flex;
-    align-items: center;
-    align-content: center;
-    justify-content: space-between;
-}
-
-.perfil {
-    display: flex;
-    flex-direction: row;
-    gap: 20px;
-    align-items: center;
-}
-
-.img_perfil {
-    width: 30px;
-    height: 30px;
-    border-radius: 100%;
-    background-color: black;
-    margin: 0;
-}
 /*#005ca9*/
 
 * {
@@ -106,10 +76,11 @@ a {
 main {
     display: flex;
     margin: 2% 0 0 0;
-    justify-content: space-between;
 }
 
 form {
+    margin-top: 20%;
+    background-color: grey;
     padding: 2%;
     display: flex;
     flex-direction: column;
@@ -134,22 +105,29 @@ form > input {
     display: flex;
     flex-wrap: wrap;
     justify-content: start;
-    width: 50%;
+    width: 80svw;
+    margin: auto;
 }
 
 .salas > div{
     display: flex;
     flex-direction: column;
+    flex-grow: 1;
+    flex-shrink: 1;
+    flex-basis: 270px;
     gap: 5px;
     margin-left: 2%;
     margin-top: 2%;
     border: 2px solid black;
-    min-width: fit-content;
-    flex-wrap: wrap;
     padding: 1%;
-    width: 13svw;
+    width: 10svw;
     box-shadow: 5px 5px 5px black;
 }
+
+.tag {
+    flex-wrap: nowrap;
+}
+
 
 .botao {
     margin: auto;
@@ -159,8 +137,7 @@ form > input {
 }
 
 .add_sala {
-    margin-top: 20%;
-    background-color: grey;
+
     padding: 2%;
     border: 2px solid black;
     border-radius: 8px;
