--- a/css/agendamento.css
+++ b/css/agendamento.css
@@ -17,7 +17,7 @@ header {
 }
 
 .titulo {
-    margin: auto !important;
+    margin: auto;
     font-size: 40pt;
 }
 
@@ -31,7 +31,7 @@ header {
 form {
     display: flex;
     flex-direction: column;
-    margin: 10% auto;
+    margin: 5% auto;
     width: 20svw;
     min-width: fit-content;
     gap: 20px;
@@ -45,6 +45,7 @@ form > section {
     flex-direction: column;
     align-items: center;
     width: 100%;
+    gap: 5px;
 }
 
 section > ul {
@@ -52,4 +53,43 @@ section > ul {
     flex-direction: row-reverse;
     justify-content: start;
     width: 100%;
+}
+
+.erro {
+    display: flex;
+    margin: 2% auto;
+    border: 2px solid black;
+    padding: 1%;
+    background-color: RGB(242, 54, 52);
+    color: white;
+    align-items: center;
+    min-width: fit-content;
+    font-size: large;
+    word-wrap: break-word;
+    width: 12svw;
+}
+
+.certo {
+    display: flex;
+    margin: 2% auto 0%;
+    border: 2px solid black;
+    padding: 1%;
+    background-color: RGB(142, 214, 151);
+    color: white;
+    align-items: center;
+    width: 12svw;
+    min-width: fit-content;
+    text-align: center;
+    font-size: large;
+    word-wrap: break-word;
+}
+
+.fechar {
+    align-self: flex-end;
+    margin-bottom: auto;
+    font-size: small;
+    border-radius: 30px;
+    padding: 1% 2%;
+    color: white;
+    background-color: rgb(0, 0, 0);
 }
