--- a/css/home.css
+++ b/css/home.css
@@ -232,18 +232,6 @@ aside {
     background-color: red;
 }
 
-#mudar_foto {
-    position: relative;
-}
-
-#file {
-    opacity: 0;
-    width: 100%;
-    height: 100%;
-    padding: 0% 0%;
-    position: fixed;
-}
-
 @media only screen and (max-width: 1380px) {
     .senai_logo {
         width: 18.9svw;
@@ -263,7 +251,7 @@ aside {
     }
 
     .tamanho_fixo {
-        width: fit-content;
+        width: 12svw;
     }
 
     .salas_status_coluna {
@@ -289,6 +277,10 @@ aside {
         min-width: 25svw;
     }
 
+    .tamanho_fixo {
+        width: 80px;
+    }
+
     .registro, .img_perfil, .senai_logo {
         display: none;
     }
@@ -307,6 +299,9 @@ aside {
         font-size: 10pt;
     }
 
+    .tamanho_fixo {
+        width: 50px;
+    }
     aside {
         max-width: fit-content;
         min-width: 30svw;
