--- a/css/home.css
+++ b/css/home.css
@@ -97,6 +97,7 @@ main {
     box-shadow: 10px 10px 10px black;
     gap: 40px;
     border-radius: 8px;
+    z-index: 10000;
 }
 
 .tela_upload > h3 {
