--- a/css/usuario.css
+++ b/css/usuario.css
@@ -42,10 +42,29 @@ table {
     border: 2px solid black;
 }
 
+caption {
+    border-top: 2px solid black;
+    border-left: 2px solid black;
+    border-right: 2px solid black;
+    padding: .5rem;
+    background: hsl(0, 0%, 69%);
+    font-weight: 700;
+}
+
+caption, th {
+    text-align: left;
+}
+
+tr {
+    border-bottom: 2px solid black;
+}
+
+tr:nth-child(2n) {
+    background: hsl(0, 0%, 69%);
+}
+ 
 th, td {
-    border: 2px solid black;
-    width: 60svw;
-    text-align: center;
+    padding: .5rem;
 }
 
 .content-opções {
@@ -99,6 +118,27 @@ th, td {
     background-color: red;
 }
 
+@media only screen and (max-width: 600px) {
+    table{
+        border-collapse: collapse;
+    }
+    
+    
+    th{
+        display: none;
+    }
+
+    td{
+        display: block;
+        padding: .25rem .5rem;
+    }
+
+    td::before {
+        content: attr(data-cell) ': ';
+        font-weight: 700;
+    }
+}
+
 
 @media only screen and (max-width: 380px) {
     .titulo {
@@ -107,11 +147,6 @@ th, td {
     
     .voltar {
         font-size: 10pt;
-    }
-    
-    table {
-        font-size: 10pt;
-        width: fit-content;
     }
 }
 
